--- a/codeworld-api-gloss.cabal
+++ b/codeworld-api-gloss.cabal
@@ -35,8 +35,9 @@ Library
                        Graphics.Gloss.Interface.IO.Display,
                        Graphics.Gloss.Interface.IO.Animate,
                        Graphics.Gloss.Interface.IO.Simulate,
-                       Graphics.Gloss.Interface.IO.Game
-                       Graphics.Gloss.Geometry.Angle
+                       Graphics.Gloss.Interface.IO.Game,
+                       Graphics.Gloss.Interface.Environment,
+                       Graphics.Gloss.Geometry.Angle,
                        Graphics.Gloss.Geometry.Line
   Other-modules:       CodeWorld,
                        CodeWorld.Color,
