--- a/codeworld-api-gloss.cabal
+++ b/codeworld-api-gloss.cabal
@@ -1,27 +1,28 @@
 Name:                codeworld-api-gloss
-Version:             0.2.2.0
-Synopsis:            Graphics library for CodeWorld, with gloss bindings
+Version:             0.3.1
+Synopsis:            Graphics library for CodeWorld
 License:             Apache
 License-file:        LICENSE
 Author:              The CodeWorld Authors
 Maintainer:          Chris Smith <cdsmith@gmail.com>
-Copyright:           (c) 2017, The CodeWorld Authors
+Copyright:           (c) 2019, The CodeWorld Authors
+Bug-reports:         https://github.com/google/codeworld/issues
 Build-type:          Simple
 Cabal-version:       >=1.8
 
 Description:
-  This module is an adaptation of the _codeworld-api_ package (<https://github.com/google/codeworld/tree/master/codeworld-api>) for HAAP.
+  This module provides the drawing code for CodeWorld.  It is heavily inspired by
+  Gloss, but modified for consistency and pedagogical reasons.
   .
-  The original package provides drawing code for CodeWorld, that is heavily inspired by Gloss but has been modified and simplified for mostly pedagogical reasons.
-  .
-  The HAAP package attempts to provide a more neat integration with Gloss, by providing a similar interface and implementing additional features such as image support and window re-dimensioning.
-  .
-  This package must to be compiled with GHCJS.
+  It comes with two backends. When compiled with GHCJS, it uses the JavaScript FFI to
+  run on <http://code.world/>.  When compiled with GHC, it uses the blank-canvas
+  package to provide a webpage consisting of just a panel locally. This way, the same
+  program that runs on the CodeWorld server can also be run locally.
 
 Library
+  Exposed:             True
   Hs-source-dirs:      src
-  Exposed-modules:     
-                       Graphics.Gloss,
+  Exposed-modules:     Graphics.Gloss,
                        Graphics.Gloss.Data.Color,
                        Graphics.Gloss.Data.Picture,
                        Graphics.Gloss.Data.Point,
@@ -39,30 +40,32 @@ Library
                        Graphics.Gloss.Interface.Environment,
                        Graphics.Gloss.Geometry.Angle,
                        Graphics.Gloss.Geometry.Line
-  Other-modules:       CodeWorld,
-                       CodeWorld.Color,
-                       CodeWorld.Picture,
-                       CodeWorld.Event,
-                       CodeWorld.Driver
-  Build-depends:       base                 >= 4.8,
-                       containers           >= 0.5.7, 
-                       hashable             >= 1.2.4, 
-                       text                 >= 1.2.2, 
-                       mtl                  >= 2.2.1, 
-                       random               >= 1.1  ,
-                       random-shuffle       >= 0.0.4, 
-                       cereal               >= 0.5.4, 
-                       cereal-text          >= 0.1.0, 
-                       filepath
+                       
+  Build-depends:       base                 >= 4.9   && < 5,
+                       containers           >= 0.5.7 && < 0.7,
+                       deepseq              >= 1.4   && < 1.5,
+                       hashable             >= 1.2.4 && < 1.3,
+                       text                 >= 1.2.2 && < 1.3,
+                       mtl                  >= 2.2.1 && < 2.3,
+                       random               >= 1.1   && < 1.2,
+                       random-shuffle       >= 0.0.4 && < 0.1,
+                       cereal               >= 0.5.4 && < 0.6,
+                       cereal-text          >= 0.1.0 && < 0.2,
+                       ghc-prim             >= 0.3.1 && < 0.6
 
   if impl(ghcjs)
-    Build-depends:
-                       ghcjs-base,
+    Js-sources:        jsbits/sim_fp.js
+    Build-depends:     ghcjs-base,
                        ghcjs-prim,
-                       ghcjs-dom             >= 0.9
+                       codeworld-game-api,
+                       codeworld-prediction,
+                       ghcjs-dom             >= 0.8 && < 0.9,
+                       transformers
   else
-    Build-depends:     blank-canvas          >= 0.6,
-                       time                  >= 1.6.0
+    Build-depends:     blank-canvas          >= 0.6 && < 0.8,
+                       time                  >= 1.6.0 && < 1.9
 
-  Exposed:             True
-  Ghc-options:         -O2
+  Ghc-options:         -O2 -Wincomplete-patterns
+
+
+
