--- a/codeworld-api-gloss.cabal
+++ b/codeworld-api-gloss.cabal
@@ -73,7 +73,7 @@ Library
                        ghcjs-prim,
                        codeworld-game-api,
                        codeworld-prediction,
-                       ghcjs-dom             >= 0.8 && <= 0.9,
+                       ghcjs-dom             >= 0.8 ,
                        transformers
   else
     Build-depends:     blank-canvas          >= 0.6 && < 0.8,
